one more of these display: inline issues with invisiblefieldset :-( Can someone replace this problematic solution with another one - please!
after correcting the property to display:block the search button moves below the search field when the text gets longer or the block width very narrow.

.block_search_forums .invisiblefieldset {
  display: block;
}

--- a/theme/standard/styles_layout.css
+++ b/theme/standard/styles_layout.css
@@ -1,3 +1,4 @@
+/* @override http://moodle18.userver.lan/theme/standard/styles_layout.css */
 /*******************************************************************
  styles_layout.css
 
@@ -1288,6 +1289,10 @@ a.skip-block, .skip-block {
 
 #block_rss {
   text-align: center;
+}
+
+.block_search_forums .invisiblefieldset {
+  display: block;
 }
 
 /***
